# http-sysstat

./: Cargo.toml  README.md  build.rs  http_sysstat.cfg  todo.md
http_sysstat/: Cargo.toml  build.rs
http_sysstat/src/: config.rs  main.rs  server.rs
http_sysstat_pluginlib/: Cargo.toml
http_sysstat_pluginlib/src/: lib.rs  stats_collector.rs  utils.rs
plugins/default_plugins/: Cargo.toml
plugins/default_plugins/src/: lib.rs  plugin.rs
plugins/example/: Cargo.toml
plugins/example/src/: lib.rs
plugins/test_plugin/: Cargo.toml
plugins/test_plugin/src/: lib.rs
src/: cpu_load_collector.rs  interval_collector.rs  lib.rs  main.rs  stats.rs
src/plugin_lib/: interval_collector.rs  mod.rs  utils.rs
