[package]
name = "http_sysstat"
version = "0.1.0"
authors = ["plaets"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "=1.0.0"  #1.1 leaks memory
serde = { version = "1.0", features = ["derive"] }
systemstat = "0.1.5"
chrono = { version = "0.4", features = ["serde"] }

#memory optimized release (don't forget about cargo strip)
#[profile.release]
#lto = true
#opt-level = 'z'
#panic = 'abort'
