[package]
authors = ["plaets"]
edition = "2018"
name = "http_sysstat"
version = "0.1.0"

[dependencies]
actix-rt = "=1.0.0"
actix-web = "2.0.0"
systemstat = "0.1.5"
serde_urlencoded = "0.5"
serde_json = "1.0"
http_sysstat_pluginlib = { path = "../http_sysstat_pluginlib" }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

#[profile.release]
#lto = true
#opt-level = 'z'
#panic = 'abort'
