[package]
authors = ["plaets"]
edition = "2018"
name = "http_sysstat"
version = "0.1.0"

[dependencies]
actix-rt = "1.1"
actix-web = "3"

serde = { features = ["derive", "rc"], version = "1.0" }
serde_urlencoded = "0.5"
serde_json = "1.0"

systemstat = "0.1"
chrono = { features = ["serde"], version = "0.4" }
confy = "0.4"

http_sysstat_pluginlib = { path = "../http_sysstat_pluginlib" }

[build-dependencies]
walkdir = "2.3"
tera = "1"
serde = { features = ["derive"], version = "1.0" }

#[profile.release]
#lto = true
#opt-level = 'z'
#panic = 'abort'
