[package]
name = "http_sysstat_pluginlib"
version = "0.1.0"
authors = ["plaets <plates.jsnm@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "=1.0.0"
actix-web = "2.0.0"
systemstat = "0.1.5"
serde_urlencoded = "0.5"
serde_json = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

#[profile.release]
#lto = true
#opt-level = 'z'
#panic = 'abort'
