[package]
name = "default_plugins"
version = "0.1.0"
authors = ["plaets <plates.jsnm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "=1.0.0"
actix-web = "2.0.0"
systemstat = "0.1.5"
serde_urlencoded = "0.5"
serde_json = "1.0"
http_sysstat_pluginlib = { path = "../../http_sysstat_pluginlib/" }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"
